[package]
name = "dwwb"
version = "0.1.0"
description = "Dreamweaver's Wiki Builder"
repository = "https://github.com/DreamweaverOI/dwwb"
edition = "2021"
rust-version = "1.65"
license = "GPL-3.0-or-later"

[dependencies]
pandoc = "^0.8"
regex = "^1.5"
serde = { version = "^1.0", features = [ "derive" ] }
serde_yaml = "^0.9"
clap = { version = "^4.0", features = [ "derive" ] }
globwalk = "^0.8"
url-escape = "^0.1"
tempfile = "^3.3"
lazy_static = "^1.4"
